--- a/root/base/site/header.tt
+++ b/root/base/site/header.tt
@@ -3,19 +3,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-<script type="text/javascript" src="[% c.uri_for('/static/js/ext/jquery/jquery-1.9.1.min.js') %]"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/i18n/grid.locale-de.js') %]"></script>
 <script type="text/javascript" src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/jquery.jqGrid.min.js') %]"></script>            
-<script type="text/javascript" src="[% c.uri_for('/static/js/ext/jquery-ui/js/jquery-ui-1.10.2.custom.min.js')%]"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
 
-<link rel="stylesheet" type="text/css" media="screen" href="[% c.uri_for('/static/js/ext/jquery-ui/css/ui-lightness/jquery-ui-1.10.2.custom.min.css') %]" />
+<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/smoothness/jquery-ui.min.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/css/ui.jqgrid.css') %]" />
+<link title="main stylesheet" href="[%c.uri_for('/static/css/womeninbotany.css')%]" type="text/css" rel="stylesheet" />
+
+<!--[if lt IE 7]>
+    <link rel="stylesheet" href="[%c.uri_for('/static/css/ie6.css')%]" media="screen" type="text/css" />
+<![endif]-->
+<!--[if IE 7]>
+    <link rel="stylesheet" href="[%c.uri_for('/static/css/ie7.css')%]" media="screen" type="text/css" />
+<![endif]-->
+<!--[if IE 8]>
+    <link rel="stylesheet" href="[%c.uri_for('/static/css/ie8.css')%]" media="screen" type="text/css" />
+<![endif]--> 
 
 <title>[% title %]</title>
 </head>
-<div>
-<a href="[% c.uri_for_action('/login/logout') %]">Logout</a>
-<div>
+
 <body id="page">
-    
+
 <div id="container">
