--- a/root/base/site/header.tt
+++ b/root/base/site/header.tt
@@ -3,14 +3,47 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/i18n/grid.locale-de.js') %]"></script>
-<script type="text/javascript" src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/jquery.jqGrid.min.js') %]"></script>            
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+<script
+    type="text/javascript"
+    src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
+</script>
+<script
+    type="text/javascript" 
+    src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/i18n/grid.locale-en.js') %]">
+</script>
+[% IF c.config.stage == 'testing' %]
+    <script
+        type="text/javascript"
+        src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/jquery.jqGrid.src.js') %]">
+    </script>            
+[% ELSE %]
+    <script
+        type="text/javascript"
+        src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/jquery.jqGrid.min.js') %]">
+    </script>            
+[% END %]
 
-<link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/smoothness/jquery-ui.min.css" />
-<link rel="stylesheet" type="text/css" media="screen" href="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/css/ui.jqgrid.css') %]" />
-<link title="main stylesheet" href="[%c.uri_for('/static/css/womeninbotany.css')%]" type="text/css" rel="stylesheet" />
+<!--
+<script
+    type="text/javascript"
+    src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/src/grid.loader.js') %]">
+</script>            
+--->
+
+<script
+    type="text/javascript"
+    src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js">
+</script>
+
+<link
+    rel="stylesheet" type="text/css" media="screen"
+    href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/smoothness/jquery-ui.min.css" />
+<link
+    rel="stylesheet" type="text/css" media="screen"
+    href="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/css/ui.jqgrid.css') %]" />
+<link
+    title="main stylesheet"
+    href="[%c.uri_for('/static/css/womeninbotany.css')%]" type="text/css" rel="stylesheet" />
 
 <!--[if lt IE 7]>
     <link rel="stylesheet" href="[%c.uri_for('/static/css/ie6.css')%]" media="screen" type="text/css" />
