--- a/root/base/site/wrapper.tt
+++ b/root/base/site/wrapper.tt
@@ -14,6 +14,7 @@
     [% IF roles %]
       <strong>Rollen:</strong> [% roles.join(', ') %]
     [% END %]
+    <strong>Stage:</strong> [% c.config.stage %]
   </div>
 </div>
 
