--- a/root/base/site/header.tt
+++ b/root/base/site/header.tt
@@ -11,30 +11,39 @@
     type="text/javascript" 
     src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/i18n/grid.locale-en.js') %]">
 </script>
+
+
 [% IF c.config.stage == 'testing' %]
     <script
         type="text/javascript"
         src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/jquery.jqGrid.src.js') %]">
-    </script>            
+    </script>
+    <script
+        type="text/javascript"
+        src="[% c.uri_for('/static/js/ext/plugins/jquery/lightBox/js/jquery.lightbox-0.5.js') %]">
+    </script>
 [% ELSE %]
     <script
         type="text/javascript"
         src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/js/jquery.jqGrid.min.js') %]">
-    </script>            
+    </script>
+    <script
+        type="text/javascript"
+        src="[% c.uri_for('/static/js/ext/plugins/jquery/lightBox/js/jquery.lightbox-0.5.min.js') %]">
+    </script>
 [% END %]
-
-<!--
-<script
-    type="text/javascript"
-    src="[% c.uri_for('/static/js/ext/plugins/jquery/jqGrid/src/grid.loader.js') %]">
-</script>            
---->
 
 <script
     type="text/javascript"
     src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js">
 </script>
 
+<link rel="stylesheet" type="text/css"  media="screen"
+      href="[% c.uri_for('/static/js/ext/plugins/jquery/lightBox/css/jquery.lightbox-0.5.css') %]"  /> 
+<!--
+<link rel="stylesheet" type="text/css" media="screen"
+      href="[% c.uri_for('/static/js/ext/plugins/jquery/lightBox/css/style.css') %]" />
+--->
 <link
     rel="stylesheet" type="text/css" media="screen"
     href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/smoothness/jquery-ui.min.css" />
