--- a/root/static/css/womeninbotany.css
+++ b/root/static/css/womeninbotany.css
@@ -149,6 +149,16 @@ label {
     width: 138px;
 }
 
+label.checkbox {
+    display: inline;
+    float: left;
+    width: auto;
+}
+
+fieldset div {
+    clear: both;  
+}
+
 input[type="text"], input[type="submit"], input[type="password"], select, textarea {
     background-color: rgba(255, 255, 255, 0.6);
     border: 1px solid #CCCCCC;
