--- a/root/base/botanist/list.tt
+++ b/root/base/botanist/list.tt
@@ -1,7 +1,7 @@
 ﻿<script type="text/javascript">
 
 function showCatlink(cellvalue, options, rowObject) {
-    var idUrl = "[% c.uri_for('/botanist/') %]" + options.rowId + "/edit";
+    var idUrl = "[% c.uri_for('/botanist/') %]" + options.rowId + "/edit_from_list";
     return "<a href='" + idUrl + "'>" + cellvalue + "</a>";
 }
 
