--- a/root/base/reference/edit.tt
+++ b/root/base/reference/edit.tt
@@ -6,7 +6,7 @@
       icon  = 'contact'
       class = 'prevent'
     }
-    { url   =  c.uri_for_action('/reference/edit' [reference.id])
+    { url   =  c.uri_for_action('/reference/edit', [reference.id])
       title = 'Edit'
       icon  = 'pencil'
       class = 'prevent'
