--- a/root/base/botanist/edit.tt
+++ b/root/base/botanist/edit.tt
@@ -147,7 +147,7 @@ $(document).ready(function() {
         {
             url   =  c.uri_for_action('/botanist/show', [botanist.id])
             title = 'Show' 
-            icon  = 'pencil'
+            icon  = 'person'
             class = 'prevent'
             state = 'active'
         }
@@ -159,24 +159,24 @@ $(document).ready(function() {
         }
     ];
 %]
-[% navs = [
-        { name = 'first', url  = first },
-        { name = 'next',  url  = next  },
-        { name = 'prev',  url  = prev  },
-        { name = 'last',  url  = last  },
-    ] ;    
+[%  navs = [
+        { name => 'first', icon => 'seek-first' },
+        { name => 'next',  icon => 'seek-next'  },    
+        { name => 'prev',  icon => 'seek-prev'  },        
+        { name => 'last',  icon => 'seek-end'   }
+    ]    
 %]
 [% FOREACH nav IN navs %]
-    [% IF nav.url %]
-        [%  link = {
-            url   =  c.uri_for_action('/botanist/edit_from_list', [nav.url] ),
+    [%  link = {
+            url = c.uri_for_action(
+                '/botanist/edit', [botanist.id], {'nav' => nav.name}
+            ),
             title = nav.name.ucfirst,
-            icon  = nav.name,
+            icon  = nav.icon
             class = 'prevent',
         };
         menu_links.push(link);
     %]
-    [% END %]
 [% END %]
 
 <div id="tabs">
@@ -185,7 +185,8 @@ $(document).ready(function() {
         <li><a href="#activity">Activity</a></li>
         <li><a href="#references">References</a></li>
     </ul>
-    <form id="botanist" action="[% c.uri_for_action('/botanist/edit', [botanist.id]) %]" method="post">
+    <form id="botanist" action="[%
+        c.uri_for_action('/botanist/edit', [botanist.id]) %]" method="post">
     <div id="biography">
         [% IF image %]
         <div class="portrait">
