--- a/root/base/site/admin/footer.tt
+++ b/root/base/site/admin/footer.tt
@@ -1,7 +1,7 @@
 <div class="alpha60" id="footer">			
     <p id="name">
     <strong>Women in Botany</strong>
-        v. [% c.VERSION %], last change 08.06.2013, &copy; Project
+        v. [% c.VERSION %], last change [% c.last_modified %], &copy; Project
         Woman in Botany 
         <br /> DB:
         [% c.model('WomeninBotanyDB').connect_info.dsn.remove('[^=]*=') %]
