--- a/root/base/site/admin/header.tt
+++ b/root/base/site/admin/header.tt
@@ -11,7 +11,7 @@
 [%- ELSE -%]
 <script
     type="text/javascript"
-    src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
+    src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
 </script>
 [%- END -%]
 
@@ -48,7 +48,7 @@
 [%- ELSE -%]
 <script
     type="text/javascript"
-    src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js">
+    src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js">
 </script>
 [%- END -%]
 
@@ -62,7 +62,7 @@
 [%- ELSE -%]
 <link
     rel="stylesheet" type="text/css" media="screen"
-    href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/smoothness/jquery-ui.min.css" />
+    href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/themes/smoothness/jquery-ui.min.css" />
 [%- END -%]
 <link
     rel="stylesheet" type="text/css" media="screen"
