--- a/root/base/site/user/header.tt
+++ b/root/base/site/user/header.tt
@@ -11,7 +11,7 @@
 [%- ELSE -%]
 <script
     type="text/javascript"
-    src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
+    src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
 </script>
 [%- END -%]
 
